# overturetoosm

./: .gitignore  LICENSE.txt  README.md  __init__.py  arlington_over.geojson  process.py  pyproject.toml  requirements.txt  resources.py  scratch.py  test.py  tox.ini  wiki.txt
.github/workflows/: black.yml  docs.yml  format.yml  test.yml  tox.yml
docs/: index.html  overturetoosm.html  search.js
docs/overturetoosm/: __about__.html  addresses.html  buildings.html  objects.html  places.html  process.html  resources.html  segments.html  utils.html
html/: index.html  search.js
html/overture_to_osm/: process.html
scripts/: get_wiki.py  make_docs.py  scratch.py  tags.json  test.py  test_address.geojson  test_building.geojson  test_segment.geojson  wiki.txt  write_tags.py  write_wiki.py
src/overture_to_osm/: __about__.py  process.py  resources.py
src/overturetoosm/: __about__.py  __init__.py  __main__.py  addresses.py  buildings.py  cli.py  objects.py  places.py  process.py  resources.py  segment_objects.py  segments.py  utils.py
tests/: __init__.py  test.py  test_addresses.py  test_buildings.py  test_other.py  test_places.py  test_segments.py
