[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overturetoosm"
dynamic = ["version"]
description = 'Translate the Overture maps schema to OpenStreetMap tags.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["overture", "osm", "openstreetmap", "mapping", "overture maps"]
authors = [{ name = "Will", email = "wahubsch@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dependencies = ["pydantic"]

[project.urls]
Documentation = "https://whubsch.github.io/overturetoosm/index.html"
Issues = "https://github.com/whubsch/overturetoosm/issues"
Source = "https://github.com/whubsch/overturetoosm"

[tool.hatch.version]
path = "src/overturetoosm/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/overturetoosm tests}"

[tool.coverage.run]
source_pkgs = ["overturetoosm", "tests"]
branch = true
parallel = true
omit = ["src/overturetoosm/__about__.py"]

[tool.coverage.paths]
overturetoosm = ["src/overturetoosm", "*/overturetoosm/src/overturetoosm"]
tests = ["tests", "*/overturetoosm/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
